--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
+    "@sanity/vision": "^3.99.0",
+    "next": "15.3.5",
+    "next-sanity": "^9.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "sanity": "^3.99.0",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@portabletext/react": "^3.2.1",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5"
   }
 }
