--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "@sanity/vision": "^3.99.0",
-    "next": "15.3.5",
+    "next": "^15.4.1",
     "next-sanity": "^9.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -25,6 +25,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
