--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-sanity": "^9.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.7.0",
     "sanity": "^3.99.0",
     "sass": "^1.89.2",
     "swiper": "^11.2.10"
