--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "casedeschise.ro",
   "version": "0.1.0",
@@ -10,13 +11,14 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
-    "@sanity/vision": "^3.99.0",
+    "@sanity/structure": "^2.36.2",
+    "@sanity/vision": "^4.2.0",
     "next": "^15.4.1",
     "next-sanity": "^9.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.7.0",
-    "sanity": "^3.99.0",
+    "sanity": "^4.2.0",
     "sass": "^1.89.2",
     "swiper": "^11.2.10"
   },
