--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "casedeschise.ro",
   "version": "0.1.0",
@@ -19,6 +18,7 @@
     "react-dom": "^19.0.0",
     "resend": "^4.7.0",
     "sanity": "^4.2.0",
+    "sanity-plugin-media": "^4.0.0",
     "sass": "^1.89.2",
     "swiper": "^11.2.10"
   },
